--- a/custom-css/workbench.main.css
+++ b/custom-css/workbench.main.css
@@ -1,3 +1,4 @@
+
 .monaco-workbench>.part.statusbar {
 	color: #999999 !important;
 	background: #333333 !important;
@@ -6,4 +7,17 @@
 .margin-view-overlays {
 	color: #595959 !important;
 	background: #212121 !important;
+}
+
+.monaco-editor.vs-dark .reference-zone-widget {
+	border-top-color: #595959 !important;
+	border-bottom-color: #595959 !important;
+}
+
+.monaco-editor.vs-dark .peekview-widget .head {
+	border-top-color: #595959 !important;
+}
+
+.monaco-editor.vs-dark .reference-zone-widget, .monaco-editor.vs-dark .reference-zone-widget .preview .monaco-editor-background {
+	background-color: #1F1F1F !important;
 }
